# mystudying-rust-rocket-apisample

./: .gitignore  Cargo.toml  README.md
db/: db.sqlite
migrations/20160720150332_create_tasks_table/: down.sql  up.sql
src/: main-copy.txt  main.rs  record.rs  task.rs  tests.rs
