[package]
name = "rocket-todo-sample-mysutra"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.7" # changed from original
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve", "json"]
